# open-webui

./: Dockerfile  docker-compose.dev.yaml
backend/: create_admin.sh  pyproject.toml  requirements.txt
backend/common/models/: files.py  groups.py  users.py  vector.py
backend/common/storage/: provider.py
backend/common/vector_store/: base.py  qdrant.py  vector_factory.py  vector_store.py
backend/data_processing/: Dockerfile  consumer.py  errors.py  main.py  requirements.txt  retrieval.py  utils.py  worker.py
backend/data_processing/extractors/extractors/: abstract_extractor.py  extraction_service.py  (+3 more)
backend/data_processing/pdf_extractors/: abstract_extraction.py  extraction_service.py  factories.py  markdown_extractor.py  validator.py
backend/data_processing/url_extractors/: crawl4ai_adapter.py  interface.py
backend/open_webui/: config.py  env.py  main.py
backend/open_webui/chat_channels/: facebook.py
backend/open_webui/internal/: rabbitmq.py
backend/open_webui/models/: chat_channels.py  chats.py  files.py
backend/open_webui/retrieval/: utils.py
backend/open_webui/routers/: knowledge.py  retrieval.py  tasks.py  users.py
backend/open_webui/storage/: provider.py
backend/open_webui/utils/: middleware.py  payload.py  task.py
backend/tests/: conftest.py  test_data_processing.py  test_loader.py
backend/tests/data_processing/: test_docling_extraction.md  test_llm_usage_markitdown_extractor.md  test_qdrant.py  test_retrival.py  test_save_doc_to_qdrant.py
backend/tests/routers/: test_integration.py
backend/tests/storage/: test_provider.py
(+19 files in other folders)
